--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="//rawgithub.com/Caged/d3-tip/master/examples/example-styles.css">
 </head>
 <body>
-  <div id='root'></div>
+  <div id='root'>
+    <h3> Doping in Professional Bike Racing </h3>
+  </div>
   <script src='build/bundle.js'></script>
 </body>
 </html>
